--- a/source/fiche_mb-pile.tex
+++ b/source/fiche_mb-pile.tex
@@ -72,7 +72,7 @@ En t'aidant des blocs ci-dessous, programme \mb~pour :
 \subsubsection{Notes pour l'enseignant}
 
 Ce premier niveau permet de se familiariser avec l’interface tout en produisant un premier programme fonctionnel et utile.
-
+Le programme à assembler est disponible sur ce lien : \url{https://makecode.microbit.org/_4JRa0easE67F}
 \begin{minipage}[t]{0.5\linewidth}
     \begin{methode}~\\
     Pour résoudre ce problème, il suffit de programmer les instructions de la façon suivante :
