mise à jour fiche classroom [en relecture]

--- a/source/fiche_mb-classroom.tex
+++ b/source/fiche_mb-classroom.tex
@@ -132,13 +132,13 @@ Plus qu'un simple partage de code, l'interface \mb |classroom va permettre de:
     et rentrer le code PIN.
     \vspace{5mm}
 
-    \centerline{\includegraphics[width=0.6\linewidth]{res/classroom_dashboard2.png}}
+    \centerline{\includegraphics[width=0.7\linewidth]{res/classroom_dashboard2.png}}
     
 \end{methode}
 
 
 \newpage
-\vspace{5mm}\\
+\vspace{5mm}~\\
 
 \begin{remarque}
     Une fois connectés, les élèves renseigneront leur nom tel qu'il apparaîtra sur votre écran,
@@ -170,7 +170,34 @@ Plus qu'un simple partage de code, l'interface \mb |classroom va permettre de:
 \begin{remarque}
     Pour l'éditeur de programmation par bloc, seul les blocs actifs côté élève
     apparaitront dans la fenêtre de supervision.
-
     
 \end{remarque}
+
+
+\newpage
+\vspace{5mm}~\\
+
+\subsubsection{Sauvegarder une session}
+
+    \begin{methode}
+        Cette dernière étape de la vie d'une session vous permettra de récupérer un fichier html
+        contenant toutes les informations nécessaires pour reprendre le travail ultérieurement.
+        Le fait de clôturer la session, rendra inactive la connexion.
+        
+    \vspace{5mm}
+    
+    \centerline{\includegraphics[width=0.7\linewidth]{res/classroom_save.png}}
+        
+        Pour reprendre le travail, il suffit d'ouvrir fichier .html dans le navigateur et l'on 
+        retrouvera le dernier programme proposé ainsi que les travaux des élèves. Ils pourront
+         dès lors de nouveau se connecter, et sélectionner leur nom dans un menu déroulant afin de 
+         retrouver leur travail.
+
+    \end{methode}
+
+    \begin{remarque}
+        Attention au paramètrage du navigateur, si celui est trop strict sur la gestion des
+         données personnelles vous pourriez être dans l'impossibilité de réouvrir correctement
+         une session.
+    \end{remarque}
 
