--- a/source/main.tex
+++ b/source/main.tex
@@ -44,6 +44,11 @@
 
 
 %%% Fiches
+
+\newpage\nopagecolor\input{fiche_mb_makecode_blocsPrincipaux.tex}
+\newpage\nopagecolor\input{fiche_mb_makecode_1erProgramme.tex}
+\newpage\nopagecolor\input{fiche_mbpy-initiationPython.tex}
+\newpage\nopagecolor\input{fiche_mb-classroom.tex}
 \newpage\nopagecolor\input{fiche_mb-borneSatisfaction.tex}
 \newpage\nopagecolor\input{fiche_mb-fraction.tex}
 \newpage\nopagecolor\input{fiche_mb-dede.tex}
@@ -53,9 +58,6 @@
 \newpage\nopagecolor\input{fiche_mb-oscillations.tex}
 \newpage\nopagecolor\input{fiche_mbpy-FT_mu.tex}
 \newpage\nopagecolor\input{fiche_mbpy-FT_python.tex}
-\newpage\nopagecolor\input{fiche_mb_makecode_blocsPrincipaux.tex}
-\newpage\nopagecolor\input{fiche_mb_makecode_1erProgramme.tex}
-\newpage\nopagecolor\input{fiche_mbpy-initiationPython.tex}
 \newpage\nopagecolor\input{fiche_mbpy-dede.tex}
 \newpage\nopagecolor\input{fiche_mbpy-pilecom.tex}
 \newpage\nopagecolor\input{fiche_maqueen-distance.tex}
