fiche classroom [relue]

--- a/source/fiche_mb-classroom.tex
+++ b/source/fiche_mb-classroom.tex
@@ -25,11 +25,11 @@ Plus qu'un simple partage de code, l'interface \mb |classroom va permettre de:
 
 %liste d'arguments
 \begin{description}
-    \item [proposer] une situation initiale en bloc ou en python
-    \item [suivre] en direct le travail des élèves
-    \item [partager] un code entre élèves de façon globale ou ciblée
-    \item [sauvegarder] une séance de travail
-    \item [reprendre] une séance là où elle s'était arrêtée
+    \item [proposer] une situation initiale en bloc ou en python.
+    \item [suivre] en direct le travail des élèves.
+    \item [partager] un code entre élèves de façon globale ou ciblée.
+    \item [sauvegarder] une séance de travail.
+    \item [reprendre] une séance là où elle s'était arrêtée.
 \end{description}
 
 
@@ -87,10 +87,10 @@ Plus qu'un simple partage de code, l'interface \mb |classroom va permettre de:
     Dans le bandeau supérieur on trouve le menu de ce qui correspond aux 4 étapes
      de la vie d'une session :
      \begin{enumerate}
-        \item Création du code dans l'éditeur
-        \item Partage de la session
-        \item Supervision des travaux
-        \item Sauvegarde et clôture d'une session         
+        \item Création du code dans l'éditeur.
+        \item Partage de la session.
+        \item Supervision des travaux.
+        \item Sauvegarde et clôture d'une session.
      \end{enumerate}~\\
 
     \centerline{\includegraphics[width=0.8\linewidth]{res/classroom_menu.png}}
@@ -117,7 +117,7 @@ Plus qu'un simple partage de code, l'interface \mb |classroom va permettre de:
         
     \end{itemize}
     
-    Le code pourra être modifié ultérieurement pour être distribué à toute la classe ou de façon ciblée,
+    Le code peut être modifié ultérieurement pour être distribué à toute la classe ou de façon ciblée,
      ce qui permet un travail de différenciation.
  
 \end{remarque}
@@ -127,7 +127,7 @@ Plus qu'un simple partage de code, l'interface \mb |classroom va permettre de:
 \subsubsection{Partager la session}
 
 \begin{methode}
-    Pour se connecter à la session, les élèves doit aller sur le site :  \url{http://microbit.org/join}
+    Pour se connecter à la session, les élèves doivent aller sur le site :  \url{http://microbit.org/join}
      renseigner le nom de la classe (l'occasion de réviser son vocabulaire anglais)
     et rentrer le code PIN.
     \vspace{5mm}
@@ -142,7 +142,7 @@ Plus qu'un simple partage de code, l'interface \mb |classroom va permettre de:
 
 \begin{remarque}
     Une fois connectés, les élèves renseigneront leur nom tel qu'il apparaîtra sur votre écran,
-    mais aussi tel sera enregistrer dans le fichier de sauvegarde et de compte-rendu, attention
+    mais aussi tel qu'il sera enregistré dans le fichier de sauvegarde et de compte-rendu, attention
     aux noms fantaisistes.
     
 \end{remarque}
@@ -153,8 +153,8 @@ Plus qu'un simple partage de code, l'interface \mb |classroom va permettre de:
 
 \begin{methode}
         Dans cette fenêtre, la liste des élèves apparaît à gauche avec l'indication 
-        de l'état de son travail : en cours ou terminé avec en prime une autoévaluation sous la
-        forme de smiley.\\
+        de l'état de son travail : en cours ou terminé (avec en prime une autoévaluation sous la
+        forme de smiley).\\
         Dans la partie droite apparait le travail de l'élève dont les modifications sont instantannément
         reportées. Là encore on retrouve le bouton "Share code with students" qui permet d'envoyer à tout
         ou une partie de la classe le code produit par un élève.
