upgrade scripts et fonctionnement

--- a/source/main.tex
+++ b/source/main.tex
@@ -45,27 +45,27 @@
 
 %%% Fiches
 
-% \newpage\nopagecolor\input{fiche_mb_makecode_blocsPrincipaux.tex}
-% \newpage\nopagecolor\input{fiche_mb_makecode_1erProgramme.tex}
-% \newpage\nopagecolor\input{fiche_mbpy-initiationPython.tex}
+\newpage\nopagecolor\input{fiche_mb_makecode_blocsPrincipaux.tex}
+\newpage\nopagecolor\input{fiche_mb_makecode_1erProgramme.tex}
+\newpage\nopagecolor\input{fiche_mbpy-initiationPython.tex}
 \newpage\nopagecolor\input{fiche_mb-classroom.tex}
-% \newpage\nopagecolor\input{fiche_mb-borneSatisfaction.tex}
-% \newpage\nopagecolor\input{fiche_mb-fraction.tex}
-% \newpage\nopagecolor\input{fiche_mb-dede.tex}
-% \newpage\nopagecolor\input{fiche_mb-truque.tex}
-% \newpage\nopagecolor\input{fiche_mb-pile.tex}
-% \newpage\nopagecolor\input{fiche_mb-fluctuation.tex}
-% \newpage\nopagecolor\input{fiche_mb-oscillations.tex}
-% \newpage\nopagecolor\input{fiche_mbpy-FT_mu.tex}
-% \newpage\nopagecolor\input{fiche_mbpy-FT_python.tex}
-% \newpage\nopagecolor\input{fiche_mbpy-dede.tex}
-% \newpage\nopagecolor\input{fiche_mbpy-pilecom.tex}
-% \newpage\nopagecolor\input{fiche_maqueen-distance.tex}
-% \newpage\nopagecolor\input{fiche_mbot-vitesse.tex}
-% \newpage\nopagecolor\input{fiche_mbot-vitesse-rot.tex}
-% \newpage\nopagecolor\input{fiche_mbot-natureMouvement.tex}
-% \newpage\nopagecolor\input{fiche_st-truque.tex}
-% \newpage\nopagecolor\input{fiche_st-pile.tex}
+\newpage\nopagecolor\input{fiche_mb-borneSatisfaction.tex}
+\newpage\nopagecolor\input{fiche_mb-fraction.tex}
+\newpage\nopagecolor\input{fiche_mb-dede.tex}
+\newpage\nopagecolor\input{fiche_mb-truque.tex}
+\newpage\nopagecolor\input{fiche_mb-pile.tex}
+\newpage\nopagecolor\input{fiche_mb-fluctuation.tex}
+\newpage\nopagecolor\input{fiche_mb-oscillations.tex}
+\newpage\nopagecolor\input{fiche_mbpy-FT_mu.tex}
+\newpage\nopagecolor\input{fiche_mbpy-FT_python.tex}
+\newpage\nopagecolor\input{fiche_mbpy-dede.tex}
+\newpage\nopagecolor\input{fiche_mbpy-pilecom.tex}
+\newpage\nopagecolor\input{fiche_maqueen-distance.tex}
+\newpage\nopagecolor\input{fiche_mbot-vitesse.tex}
+\newpage\nopagecolor\input{fiche_mbot-vitesse-rot.tex}
+\newpage\nopagecolor\input{fiche_mbot-natureMouvement.tex}
+\newpage\nopagecolor\input{fiche_st-truque.tex}
+\newpage\nopagecolor\input{fiche_st-pile.tex}
 
 
 \end{document}
