fiche fonctions, MAJ pile-face & dede, codes HEX

--- a/source/fiche_mb-dede.tex
+++ b/source/fiche_mb-dede.tex
@@ -71,11 +71,13 @@ En t'aidant des blocs ci-dessous, programme \mb~pour :
 
 Ce premier niveau aucun niveau de difficulté, on pourrait dire que son intérêt se limite à poser la problématique.
 
+
+
 \begin{minipage}[t]{0.5\linewidth}
-    \begin{methode}
-    ~\\Pour résoudre ce problème, il suffit de programmer les instructions de la façon suivante :
+    \begin{methode}~\\
+    Pour résoudre ce problème, il suffit de programmer les instructions de la façon suivante :
     
-    \includegraphics[width=0.4\linewidth]{res/mbDe6FacesN1proposition.png}
+    \includegraphics[width=0.8\linewidth]{res/mbDe6FacesN1proposition.png}
     \end{methode}
 \end{minipage}
 \hfill
@@ -130,9 +132,13 @@ Attention tous les blocs ne sont pas représentés et certains blocs doivent êt
 \newpage
 \subsubsection{Notes pour l'enseignant}
 
-Pour arriver au résultat escompté il est nécessaire d'utiliser une variable, ainsi qu'une suite d'instruction si/sinon si/sinon. Si l'usage d'une variable n'apparaît pas forcément évident pour les élèves, on peut les laisser programmer sans pour qu'il puisse ainsi constater le bug produit.
-Il est aussi intéressant de faire remarquer aux élèves que le nombre issue du tirage aléatoire n'a pas forcément à être celui symbolisé par sortie sur l'écran de DEL.
-
+Pour arriver au résultat escompté il est nécessaire d'utiliser une variable, ainsi qu'une suite 
+d'instruction si/sinon si/sinon. Si l'usage d'une variable n'apparaît pas forcément évident pour les élèves, 
+on peut les laisser programmer sans pour qu'il puisse ainsi constater le bug produit.
+Il est aussi intéressant de faire remarquer aux élèves que le nombre issue du tirage aléatoire 
+n'a pas forcément à être celui symbolisé par sortie sur l'écran de DEL.\\
+Le programme à assembler est disponible en suivant ce lien :
+~\\ \url{https://makecode.microbit.org/_XdVPkRXfXLq6}
 
 \begin{minipage}[t]{0.5\linewidth}
     \begin{methode}~\\
@@ -146,8 +152,7 @@ Il est aussi intéressant de faire remarquer aux élèves que le nombre issue du
     \begin{remarque}~\\
     Il est très simple en partant de cette situation d'envoyer les résultats par radio ver un \mb qui centraliserait alors les issues de l'ensemble des tirages. Pour cela il suffit d'ajouter le bloc "envoyer le nombre" qui se trouve dans la catégorie "Radio".
     
-    \includegraphics[width=\linewidth]{res/mbDe6FacesN2radio.png}
+    \includegraphics[width=0.85\linewidth]{res/mbDe6FacesN2radio.png}
     
-    Plus d'informations sur la page de l'activité :\\ \url{https://microbit.readthedocs.io/fr/latest/decouverte/de6faces-bloc2.html}
     \end{remarque}
 \end{minipage}
