--- a/source/fiche_mb-pile.tex
+++ b/source/fiche_mb-pile.tex
@@ -15,7 +15,9 @@ Le but de ce projet est de simuler une expérience aléatoire de lancer de pièc
 \end{formule}
 
 \subsubsection{Intérêt}
+
 Bien évidemment, travailler avec une carte \mb n'exclut pas de réaliser des expériences aléatoires réelles (pièces, dés, etc.). Cependant, il est très intéressant pour l'enseignant d'utiliser des \mb dans cette partie du programme.
+
 \begin{description}
     \item [Simplicité de la situation.] La situation est très simple à expliquer et les élèves comprennent le but à atteindre. L'absence de difficulté mathématique rend cette situation particulièrement simple à mettre en œuvre.
     \item [Motivation des élèves.] L'envie de programmer un objet connecté est grande pour les élèves. Cette façon de programmer, \emph{utile, concrète et appliquée}, leur correspond parfaitement.
@@ -71,8 +73,14 @@ En t'aidant des blocs ci-dessous, programme \mb~pour :
 \newpage
 \subsubsection{Notes pour l'enseignant}
 
-Ce premier niveau permet de se familiariser avec l’interface tout en produisant un premier programme fonctionnel et utile.
-Le programme à assembler est disponible sur ce lien : \url{https://makecode.microbit.org/_4JRa0easE67F}
+Ce premier niveau permet de se familiariser avec l’interface tout en produisant un premier programme fonctionnel et utile.\\
+
+Le programme à assembler est disponible en suivant ce lien :
+
+~\\ \url{https://makecode.microbit.org/_4JRa0easE67F}
+
+
+
 \begin{minipage}[t]{0.5\linewidth}
     \begin{methode}~\\
     Pour résoudre ce problème, il suffit de programmer les instructions de la façon suivante :
@@ -130,7 +138,11 @@ Voici deux idées :
 \newpage
 \subsubsection{Notes pour l'enseignant}
 
-Ce deuxième niveau est l'occasion d'introduire les notions de fonctions et les branchements conditionnels.
+Ce deuxième niveau est l'occasion d'introduire les notions de fonctions et les instructions conditionnels.
+
+
+\\ Le programme à assembler est disponible en suivant ce lien :
+~\\ \url{https://makecode.microbit.org/_FM2Pszge4HoT}
 
 \begin{methode}
 Voici une proposition qui fonctionne :
@@ -173,7 +185,7 @@ Pour finir, nous souhaitons ajouter une fonctionnalité supplémentaire à \mb. 
 
 Regarde ci-dessous les instructions que tu pourrais ajouter.
 
-\centerline{\includegraphics[width=0.7\textwidth]{mbPilefaceN3blocs.png}}
+\centerline{\includegraphics[width=0.7\textwidth]{res/mbPilefaceN3blocs.png}}
 \end{eleve}
 
 
@@ -181,7 +193,14 @@ Regarde ci-dessous les instructions que tu pourrais ajouter.
 \newpage
 \subsubsection{Notes pour l'enseignant}
 
-Dans ce troisième niveau, nous souhaitons compter les issues obtenues et afficher les totaux. Il faut introduire la notion de variable informatique.
+Dans ce troisième niveau, nous souhaitons compter les issues obtenues et afficher les totaux.
+Il faut introduire la notion de variable informatique.
+
+
+\\ Le programme à assembler est disponible en suivant ce lien :
+~\\ \url{https://makecode.microbit.org/_PWgKvtHqYHku}
+
+
 
 \begin{methode}
 Le résultat escompté est le suivant :\\
