--- a/source/fiche_mb-pile.tex
+++ b/source/fiche_mb-pile.tex
@@ -141,7 +141,7 @@ Voici deux idées :
 Ce deuxième niveau est l'occasion d'introduire les notions de fonctions et les instructions conditionnels.
 
 
-\\ Le programme à assembler est disponible en suivant ce lien :
+~\\ Le programme à assembler est disponible en suivant ce lien :
 ~\\ \url{https://makecode.microbit.org/_FM2Pszge4HoT}
 
 \begin{methode}
@@ -197,7 +197,7 @@ Dans ce troisième niveau, nous souhaitons compter les issues obtenues et affich
 Il faut introduire la notion de variable informatique.
 
 
-\\ Le programme à assembler est disponible en suivant ce lien :
+~\\ Le programme à assembler est disponible en suivant ce lien :
 ~\\ \url{https://makecode.microbit.org/_PWgKvtHqYHku}
 
 
