--- a/source/apropos-mb.tex
+++ b/source/apropos-mb.tex
@@ -20,7 +20,7 @@ Après un bref rappel historique, nous expliquerons plus en détail les caracté
 \subsection{Bref historique}
 
 
-Le développement de \mb s’inscrit dans le cadr d’une politique volontariste de développement de l’apprentissage de la programmation. L’objectif premier visait à équiper tous les élèves de 11/12 ans du Royaume-Unis ainsi que leur enseignant. Maintenant que c’est chose faite, le reste du monde peut en profiter aussi.
+Le développement de \mb s’inscrit dans le cadre d’une politique volontariste de développement de l’apprentissage de la programmation. L’objectif premier visait à équiper tous les élèves de 11/12 ans du Royaume-Unis ainsi que leur enseignant. Maintenant que c’est chose faite, le reste du monde peut en profiter aussi.
 
 % \begin{wrapfigure}[12]{r}{5cm}
 %     \includegraphics[width=\linewidth]{res/mb-ap-03}
