--- a/source/main.tex
+++ b/source/main.tex
@@ -34,16 +34,17 @@
 
 %%% À propos de la brochure
 \newpage\pagecolor{bleuamu!10}
-% \input{apropos.tex}
+\input{apropos.tex}
 
 
 %%% Généralités
 \newpage\pagecolor{bleuamu!10}
-% \input{apropos-mb.tex}
+\input{apropos-mb.tex}
  
 
 
 %%% Fiches
+
 
 \newpage\nopagecolor\input{fiche_mb_makecode_blocsPrincipaux.tex}
 \newpage\nopagecolor\input{fiche_mb_makecode_1erProgramme.tex}
